// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notifications > should render with transactions in lg 1`] = `
<div>
  <div>
    <div
      aria-controls="«r1m»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <span>
          <span
            aria-describedby="«r1o»"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
              data-testid="NavigationBar__buttons--notifications"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="m-0 p-1"
                >
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      id="bell"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </span>
          <div
            data-floating-ui-focusable=""
            id="«r1o»"
            role="tooltip"
            style="position: absolute; left: 0px; top: 0px; z-index: 50; transform: translate(0px, -12px);"
            tabindex="-1"
          >
            <div
              style="transition-property: opacity,transform; transition-duration: 250ms;"
            >
              <svg
                aria-hidden="true"
                class="fill-theme-secondary-900 dark:fill-theme-secondary-700 dim:fill-theme-dim-700"
                height="14"
                style="position: absolute; pointer-events: none; top: 100%; left: 0px;"
                viewBox="0 0 14 14"
                width="14"
              >
                <path
                  d="M0,0 H14 L8.75,6 Q7,8 5.25,6 Z"
                  stroke="none"
                />
                <clippath
                  id="«r1q»"
                >
                  <rect
                    height="14"
                    width="14"
                    x="0"
                    y="0"
                  />
                </clippath>
              </svg>
              <div
                class="overflow-wrap-anywhere dark:bg-theme-secondary-700 dark:text-theme-secondary-200 bg-theme-secondary-900 dim:text-theme-dim-50 dim:bg-theme-dim-700 max-w-[600px] rounded-md px-2 py-1 text-sm font-semibold break-words whitespace-nowrap text-white"
                style="font-feature-settings: "liga" off, "calt" off;"
              >
                <div>
                  Notifications
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in md 1`] = `
<div>
  <div>
    <div
      aria-controls="«r14»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <span>
          <span
            aria-describedby="«r16»"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
              data-testid="NavigationBar__buttons--notifications"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="m-0 p-1"
                >
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      id="bell"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </span>
          <div
            data-floating-ui-focusable=""
            id="«r16»"
            role="tooltip"
            style="position: absolute; left: 0px; top: 0px; z-index: 50; transform: translate(0px, -12px);"
            tabindex="-1"
          >
            <div
              style="transition-property: opacity,transform; transition-duration: 250ms;"
            >
              <svg
                aria-hidden="true"
                class="fill-theme-secondary-900 dark:fill-theme-secondary-700 dim:fill-theme-dim-700"
                height="14"
                style="position: absolute; pointer-events: none; top: 100%; left: 0px;"
                viewBox="0 0 14 14"
                width="14"
              >
                <path
                  d="M0,0 H14 L8.75,6 Q7,8 5.25,6 Z"
                  stroke="none"
                />
                <clippath
                  id="«r18»"
                >
                  <rect
                    height="14"
                    width="14"
                    x="0"
                    y="0"
                  />
                </clippath>
              </svg>
              <div
                class="overflow-wrap-anywhere dark:bg-theme-secondary-700 dark:text-theme-secondary-200 bg-theme-secondary-900 dim:text-theme-dim-50 dim:bg-theme-dim-700 max-w-[600px] rounded-md px-2 py-1 text-sm font-semibold break-words whitespace-nowrap text-white"
                style="font-feature-settings: "liga" off, "calt" off;"
              >
                <div>
                  Notifications
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in sm 1`] = `
<div>
  <div>
    <div
      aria-controls="«ri»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <span>
          <span
            aria-describedby="«rk»"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
              data-testid="NavigationBar__buttons--notifications"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="m-0 p-1"
                >
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      id="bell"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </span>
          <div
            data-floating-ui-focusable=""
            id="«rk»"
            role="tooltip"
            style="position: absolute; left: 0px; top: 0px; z-index: 50; transform: translate(0px, -12px);"
            tabindex="-1"
          >
            <div
              style="transition-property: opacity,transform; transition-duration: 250ms;"
            >
              <svg
                aria-hidden="true"
                class="fill-theme-secondary-900 dark:fill-theme-secondary-700 dim:fill-theme-dim-700"
                height="14"
                style="position: absolute; pointer-events: none; top: 100%; left: 0px;"
                viewBox="0 0 14 14"
                width="14"
              >
                <path
                  d="M0,0 H14 L8.75,6 Q7,8 5.25,6 Z"
                  stroke="none"
                />
                <clippath
                  id="«rm»"
                >
                  <rect
                    height="14"
                    width="14"
                    x="0"
                    y="0"
                  />
                </clippath>
              </svg>
              <div
                class="overflow-wrap-anywhere dark:bg-theme-secondary-700 dark:text-theme-secondary-200 bg-theme-secondary-900 dim:text-theme-dim-50 dim:bg-theme-dim-700 max-w-[600px] rounded-md px-2 py-1 text-sm font-semibold break-words whitespace-nowrap text-white"
                style="font-feature-settings: "liga" off, "calt" off;"
              >
                <div>
                  Notifications
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in xl 1`] = `
<div>
  <div>
    <div
      aria-controls="«r28»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <span>
          <span
            aria-describedby="«r2a»"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
              data-testid="NavigationBar__buttons--notifications"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="m-0 p-1"
                >
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      id="bell"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </span>
          <div
            data-floating-ui-focusable=""
            id="«r2a»"
            role="tooltip"
            style="position: absolute; left: 0px; top: 0px; z-index: 50; transform: translate(0px, -12px);"
            tabindex="-1"
          >
            <div
              style="transition-property: opacity,transform; transition-duration: 250ms;"
            >
              <svg
                aria-hidden="true"
                class="fill-theme-secondary-900 dark:fill-theme-secondary-700 dim:fill-theme-dim-700"
                height="14"
                style="position: absolute; pointer-events: none; top: 100%; left: 0px;"
                viewBox="0 0 14 14"
                width="14"
              >
                <path
                  d="M0,0 H14 L8.75,6 Q7,8 5.25,6 Z"
                  stroke="none"
                />
                <clippath
                  id="«r2c»"
                >
                  <rect
                    height="14"
                    width="14"
                    x="0"
                    y="0"
                  />
                </clippath>
              </svg>
              <div
                class="overflow-wrap-anywhere dark:bg-theme-secondary-700 dark:text-theme-secondary-200 bg-theme-secondary-900 dim:text-theme-dim-50 dim:bg-theme-dim-700 max-w-[600px] rounded-md px-2 py-1 text-sm font-semibold break-words whitespace-nowrap text-white"
                style="font-feature-settings: "liga" off, "calt" off;"
              >
                <div>
                  Notifications
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in xs 1`] = `
<div>
  <div>
    <div
      aria-controls="«r0»"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <span>
          <span
            aria-describedby="«r2»"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
              data-testid="NavigationBar__buttons--notifications"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="m-0 p-1"
                >
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      id="bell"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="bg-theme-background group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800 absolute top-0 right-0 flex items-center justify-center rounded-full p-0.5 transition-all duration-100 ease-linear"
                >
                  <div
                    class="bg-theme-danger-500 h-1.5 w-1.5 rounded-full"
                  />
                </div>
              </div>
            </button>
          </span>
          <div
            data-floating-ui-focusable=""
            id="«r2»"
            role="tooltip"
            style="position: absolute; left: 0px; top: 0px; z-index: 50; transform: translate(0px, -12px);"
            tabindex="-1"
          >
            <div
              style="transition-property: opacity,transform; transition-duration: 250ms;"
            >
              <svg
                aria-hidden="true"
                class="fill-theme-secondary-900 dark:fill-theme-secondary-700 dim:fill-theme-dim-700"
                height="14"
                style="position: absolute; pointer-events: none; top: 100%; left: 0px;"
                viewBox="0 0 14 14"
                width="14"
              >
                <path
                  d="M0,0 H14 L8.75,6 Q7,8 5.25,6 Z"
                  stroke="none"
                />
                <clippath
                  id="«r4»"
                >
                  <rect
                    height="14"
                    width="14"
                    x="0"
                    y="0"
                  />
                </clippath>
              </svg>
              <div
                class="overflow-wrap-anywhere dark:bg-theme-secondary-700 dark:text-theme-secondary-200 bg-theme-secondary-900 dim:text-theme-dim-50 dim:bg-theme-dim-700 max-w-[600px] rounded-md px-2 py-1 text-sm font-semibold break-words whitespace-nowrap text-white"
                style="font-feature-settings: "liga" off, "calt" off;"
              >
                <div>
                  Notifications
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
